--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton+SC&display=swap');
+
 body{
   background-color: #bada55;
+}
+h1{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 5rem;
+  text-align: center;
+  font-family: "Anton SC", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
