--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton+SC&display=swap');
+*, *:before, *:after{
+  margin:0;
+  padding:0;
+}
 
 body{
   background-color: #bada55;
@@ -13,4 +17,5 @@ h1{
   font-family: "Anton SC", sans-serif;
   font-weight: 400;
   font-style: normal;
+  height:100%;
 }
